CallMD/src/objects/Providers__c.object
<CustomObject>
    <fields>
        <fullName>Absent_Files_Notifications_Frequency__c</fullName>
        <label>Absent Files Notifications Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <label>Address Line1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Line2__c</fullName>
        <label>Address Line2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Authentication_Token__c</fullName>
        <label>Authentication Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Type__c</fullName>
        <label>Consultant Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ConsultationType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>D2C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_State_Selector__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable State Selector</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 months</fullName>
                </value>
                <value>
                    <fullName>3 months</fullName>
                </value>
                <value>
                    <fullName>6 months</fullName>
                </value>
                <value>
                    <fullName>1 year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enable_RX_Status_11_for_Consultations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable RX Status 11 for Consultations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expand_Utilization_Individual_Program__c</fullName>
        <label>Expand Utilization - Individual Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>9 Completed</fullName>
                </value>
                <value>
                    <fullName>10 Completed in BPSite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Questions__c</fullName>
        <label>Follow Up Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Home_Page__c</fullName>
        <label>Home Page</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Contact_Person__c</fullName>
        <label>IT Contact Person</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Email__c</fullName>
        <label>IT Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Instructions_Policies__c</fullName>
        <label>Instructions/Policies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Logo_ID__c</fullName>
        <label>Logo ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_URL__c</fullName>
        <formula>&quot;/servlet/servlet.FileDownload?file=&quot;&amp;Logo_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <formula>IMAGE( Logo_URL__c , Name__c,150,150)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Dummy Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone1__c</fullName>
        <label>Phone1</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone2__c</fullName>
        <label>Phone2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Programs</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipLabel>Providers</relationshipLabel>
        <relationshipName>Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report Name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Report_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Contact_Email__c</fullName>
        <label>Reporting Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reporting_Contact__c</fullName>
        <label>Reporting Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Consults__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Consults?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Script_Finish__c</fullName>
        <label>Script Finish</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Script_Start__c</fullName>
        <label>Script Start</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Script__c</fullName>
        <label>Script</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_url__c</fullName>
        <label>Site url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Started_Date__c</fullName>
        <label>Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Providers</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Phone1__c</columns>
        <columns>Phone2__c</columns>
        <columns>Address_Line1__c</columns>
        <columns>Address_Line2__c</columns>
        <columns>State__c</columns>
        <columns>ZipCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>